# LPM_experiments

./: CMakeLists.txt  README.md
1D/: CMakeLists.txt  README  gen_data.cpp  run_benchmark.sh  variogram_fft_1d.cpp  variogram_simple_1d.cpp
2D/: CMakeLists.txt  gen_data.cpp  run_benchmark.sh  variogram_fft_2d.cpp  variogram_simple_2d.cpp
3D/: CMakeLists.txt  cross_gen_data.cpp  cross_variogram_fft_3d.cpp  cross_variogram_simple_3d.cpp  gen_data.cpp  run_benchmark.sh  variogram_fft_3d.cpp  variogram_simple_3d.cpp
algorithm/: comput_period_recurrence.cpp  compute_period_linear_generator.cpp
experiments/dirf_sgsim/: DIRFSGS EXPERIMENT ATILLA 256x256x128 - 100 r.xlsx  DIRFSGS EXPERIMENT HERCULES 256x256x64 - 100 r.xlsx  plot_dirfsgs_experiment_hercules_256x256x64_100_r.gpl  plot_dirfsgs_experiment_hercules_256x256x64_100_r_speedup.gpl
python_plugin/: base_sgems_plugin.py  build.sh  derived_sgems_plugin.py  python_sgems_plugin.cpp  python_sgems_plugin.h  python_sgems_plugin_test.cpp
